--- a/app/src/main/res/layout/preference.xml
+++ b/app/src/main/res/layout/preference.xml
@@ -28,6 +28,7 @@
         android:title="@string/delete_all_label" />
 
     <CheckBoxPreference
+        android:id="@+id/checkPomodoro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:key="use_pomodoro_mode"
