Risolto errore pomodoroMode

--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,9 +32,10 @@
         android:id="@+id/checkPomodoro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:checked="true"
+        android:defaultValue="true"
         android:key="use_pomodoro_mode"
-        android:title="@string/pomodoro_mode_label"
         android:summary="@string/pomodoro_mode_expl"
-        android:defaultValue="true" />
+        android:title="@string/pomodoro_mode_label" />
 
 </PreferenceScreen>
