--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,14 +17,8 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menu_calendar"
-        android:orderInCategory="100"
-        android:title="@string/menu_calendar"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:title="@string/menu_settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
