--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -2,6 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/registrationButton"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/newPass"
+        android:layout_alignStart="@+id/newPass"
+        android:layout_below="@+id/newPass"
+        android:background="@android:color/transparent"
+        android:text="Registrati" />
+
     <EditText
         android:id="@+id/newLog"
         android:layout_width="match_parent"
@@ -32,6 +42,17 @@
         android:ems="10"
         android:hint="@string/password_textview_label"
         android:inputType="textPassword" />
+
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/registrationButton"
+        android:layout_alignBottom="@+id/registrationButton"
+        android:layout_toEndOf="@+id/registrationButton"
+        android:layout_toRightOf="@+id/registrationButton"
+        android:background="@android:color/transparent"
+        android:text="Accedi" />
 
 
 </RelativeLayout>
