--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,6 +18,7 @@
 
     <item
         android:id="@+id/menu_settings"
+        android:icon="@drawable/settings_white"
         android:orderInCategory="100"
         android:title="@string/menu_settings"
         app:showAsAction="ifRoom" />
