--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -28,13 +28,6 @@
         android:key="delete_all_preference"
         android:title="@string/delete_all_label" />
 
-    <ListPreference
-        android:id="@+id/logout_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:key="logout_button"
-        android:title="Logout" />
-
     <CheckBoxPreference
         android:id="@+id/checkPomodoro"
         android:layout_width="match_parent"
@@ -44,5 +37,19 @@
         android:key="use_pomodoro_mode"
         android:summary="@string/pomodoro_mode_expl"
         android:title="@string/pomodoro_mode_label" />
+
+    <ListPreference
+        android:id="@+id/syncUp_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:key="syncUp_button"
+        android:title="@string/syncUpLabel" />
+
+    <ListPreference
+        android:id="@+id/logout_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:key="logout_button"
+        android:title="Logout" />
 
 </PreferenceScreen>
