--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -97,6 +97,28 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/totalTime" />
 
+        <TextView
+            android:id="@+id/search_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/advice"
+            android:layout_marginTop="30sp"
+            android:text="@string/search_label" />
+
+        <EditText
+            android:id="@+id/search_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_label" />
+
+        <Button
+            android:id="@+id/search_user_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_field"
+            android:text="@string/search_button"
+            android:backgroundTint="@android:color/transparent" />
+
     </RelativeLayout>
 
 </ScrollView>
