Nuova intro Risolto-Non appaiono più due dialog di login Timer non si ferma andando in portrait mode

--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -147,7 +147,7 @@
         android:layout_alignEnd="@+id/subjectsSpinner"
         android:layout_alignRight="@+id/subjectsSpinner"
         android:layout_alignTop="@+id/locationSpinner"
-        android:background="@android:color/white"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/map_button_content"
         android:onClick="onClick"
         android:scaleType="fitCenter"
