--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -37,7 +37,7 @@
             android:layout_marginStart="70dp"
             android:layout_marginTop="30dp"
             android:background="@android:color/white"
-            android:hint="@string/add_location"
+            android:hint="@string/ex_location"
             android:paddingBottom="5dp"
             android:paddingEnd="10dp"
             android:paddingLeft="10dp"
