Cambio posizione del primo trofeo (si sblocca dopo l'intro) Correzione di alcune stringhe

--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -97,6 +97,7 @@
         android:id="@+id/projectCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/theoryCheckBox"
         android:layout_alignStart="@+id/theoryCheckBox"
         android:layout_below="@+id/exercisesCheckBox"
         android:padding="5dp"
