--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="ciano">#2cb9d9</color>
     <color name="gold">#e2ae4c</color>
     <color name="violet">#8000ff</color>
+    <color name ="lightGreen">#00cc99</color>
 </resources>
