--- a/app/src/main/res/layout/confirm_exit_dialog.xml
+++ b/app/src/main/res/layout/confirm_exit_dialog.xml
@@ -17,8 +17,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="30dp"
         android:padding="20dp"
         android:text="@string/confirm_exit_label"
         android:textSize="14sp" />
