Menù scompare anche quando il timer è attivo Aggiunto wakeup per tenere attivo il thread Migliorati layout risolti bugs

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
+        android:maxLength="14"
         android:text="@string/current_subject_label"
         android:textSize="80sp" />
 
