--- a/app/src/main/res/layout/my_locations_map.xml
+++ b/app/src/main/res/layout/my_locations_map.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#44000000"
     android:clickable="true">
 
     <ImageButton
