--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,10 @@
         <item name="android:padding">3dp</item>
     </style>
 
+    <style name="ResultsActivityLabels">
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
